--- a/Grading/lab-01.html
+++ b/Grading/lab-01.html
@@ -5,14 +5,48 @@
   </head>
   <body>
     <h1>Lab 01 - Graded Solution</h1>
-    <p><b>You scored 0% = 0.0 points for this lab.</b></p>
+    <p><b>You scored 70% = 1.4 points for this lab.</b></p>
     <ul>
-      <li><b>Running the program failed</b>
+      <li><b>Testing whether numbers are correctly identified as perfect</b>
       <ul>
-      <li>Grade Percentage: 100</li>
-      <li>Your solution failed this test case! taking  sec</Li>
-<li><pre>[Errno 3] No such process</pre></li>
-<li><pre>[Errno 3] No such process</pre></li>
+      <li>Grade Percentage: 20</li>
+      <li>Your solution succeeded taking 0.089 sec</Li>
+      </ul>
+      </li>
+      <li><b>Compute sums of multiples of 5</b>
+      <ul>
+      <li>Grade Percentage: 20</li>
+      <li>Your solution succeeded taking 0.094 sec</Li>
+      </ul>
+      </li>
+      <li><b>Number of right triangles</b>
+      <ul>
+      <li>Grade Percentage: 30</li>
+      <li>Your solution succeeded taking 0.399 sec</Li>
+      </ul>
+      </li>
+      <li><b>Check outputs of gen_pattern</b>
+      <ul>
+      <li>Grade Percentage: 30</li>
+      <li>Your solution failed this test case! taking 0.093 sec</Li>
+<li><pre>AssertionError: expected
+@
+ but got
+ for gen_pattern(@)</pre></li>
+<li><pre>Traceback (most recent call last):
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
+    test_function(
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
+    result = test_function(module, *args, **kwargs)
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpicr2bs95/lab01-test.py", line 66, in genPatterns
+    assertEquals(out.getvalue().strip(), '@', TEMPLATE + "gen_pattern(@)")
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/assertions.py", line 29, in assertEquals
+    raise AssertionError(message)
+AssertionError: expected
+@
+ but got
+ for gen_pattern(@)
+</pre></li>
       </ul>
       </li>
     </ul>
