--- a/Grading/lab-10.html
+++ b/Grading/lab-10.html
@@ -10,63 +10,67 @@
       <li><b>test_ll_fix_simple</b>
       <ul>
       <li>Grade Percentage: 10</li>
-      <li>Your solution succeeded taking 0.097 sec</Li>
+      <li>Your solution succeeded taking 0.069 sec</Li>
       </ul>
       </li>
       <li><b>test_rr_fix_simple</b>
       <ul>
       <li>Grade Percentage: 10</li>
-      <li>Your solution succeeded taking 0.095 sec</Li>
+      <li>Your solution succeeded taking 0.091 sec</Li>
       </ul>
       </li>
       <li><b>test_lr_fix_simple</b>
       <ul>
       <li>Grade Percentage: 10</li>
-      <li>Your solution succeeded taking 0.099 sec</Li>
+      <li>Your solution succeeded taking 0.098 sec</Li>
       </ul>
       </li>
       <li><b>test_rl_fix_simple</b>
       <ul>
       <li>Grade Percentage: 10</li>
-      <li>Your solution succeeded taking 0.096 sec</Li>
+      <li>Your solution succeeded taking 0.093 sec</Li>
       </ul>
       </li>
       <li><b>test_key_order_after_ops</b>
       <ul>
       <li>Grade Percentage: 30</li>
-      <li>Your solution succeeded taking 0.160 sec</Li>
+      <li>Your solution succeeded taking 0.149 sec</Li>
       </ul>
       </li>
       <li><b>test_stress_testing</b>
       <ul>
       <li>Grade Percentage: 30</li>
-      <li>Your solution failed this test case! taking 3.593 sec</Li>
+      <li>Your solution failed this test case! taking 3.383 sec</Li>
 <li><pre>AssertionError: Tree is out of balance</pre></li>
 <li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/execution_base.py", line 63, in call_test_function
-    **pre_hook_info["extra_kwargs"]
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/core.py", line 48, in wrapper
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
+    test_function(
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 48, in wrapper
     result = test_function(module, *args, **kwargs)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpaitpm6wc/lab10-test.py", line 123, in test_stress_testing
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp7xei_lca/lab10-test.py", line 123, in test_stress_testing
     traverse(t.root, check_balance)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpaitpm6wc/lab10-test.py", line 18, in traverse
-    traverse(t.right, fn)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpaitpm6wc/lab10-test.py", line 18, in traverse
-    traverse(t.right, fn)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpaitpm6wc/lab10-test.py", line 18, in traverse
-    traverse(t.right, fn)
-  [Previous line repeated 1 more time]
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpaitpm6wc/lab10-test.py", line 17, in traverse
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp7xei_lca/lab10-test.py", line 17, in traverse
     traverse(t.left, fn)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpaitpm6wc/lab10-test.py", line 18, in traverse
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp7xei_lca/lab10-test.py", line 17, in traverse
+    traverse(t.left, fn)
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp7xei_lca/lab10-test.py", line 17, in traverse
+    traverse(t.left, fn)
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp7xei_lca/lab10-test.py", line 18, in traverse
     traverse(t.right, fn)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpaitpm6wc/lab10-test.py", line 16, in traverse
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp7xei_lca/lab10-test.py", line 17, in traverse
+    traverse(t.left, fn)
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp7xei_lca/lab10-test.py", line 17, in traverse
+    traverse(t.left, fn)
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp7xei_lca/lab10-test.py", line 17, in traverse
+    traverse(t.left, fn)
+  [Previous line repeated 1 more time]
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp7xei_lca/lab10-test.py", line 16, in traverse
     fn(t)
-  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmpaitpm6wc/lab10-test.py", line 105, in check_balance
+  File "/var/folders/f7/xnz8v_b13td37s3k4w8t5j2h0000gn/T/tmp7xei_lca/lab10-test.py", line 105, in check_balance
     assertLess(abs(height(t.left) - height(t.right)), 2, 'Tree is out of balance')
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/assertions.py", line 72, in assertLess
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/assertions.py", line 72, in assertLess
     assertTrue(got < expected, template)
-  File "/Users/lord_pretzel/.pyenv/versions/3.7.4/lib/python3.7/site-packages/grader-0.0.1-py3.7.egg/grader/assertions.py", line 80, in assertTrue
+  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/assertions.py", line 80, in assertTrue
     raise AssertionError(template)
 AssertionError: Tree is out of balance
 </pre></li>
